# miata-gate

./: .gitignore  Makefile  README.md  platformio.ini  race-chrono-setup.md
src/: CMakeLists.txt  main.cpp
src/lib/: board.cpp  board.h  btcan.cpp  btcan.h  can_buffer.cpp  can_buffer.h  helpers.cpp  helpers.h  mx5.h  obd2.h  sensors.cpp  sensors.h
